syntax="proto3";

package Modix.Grpc.Example;

option php_namespace="Modix\\Grpc\\Example";
option php_metadata_namespace="Modix\\Grpc\\Example";

enum ExampleStatus {
  // 0 must be here in proto3
  OK = 0;
  // other status codes should be > 16 to avoid
  // mixing up with Spiral\GRPC\StatusCode values
  EMPTY_STRING = 100;
}

message ToUpperArgs {
  string string = 1;
}

message ToUpperResult {
  string string = 1;
}

message VehicleMessage {
  int32 id = 1;
  string make = 2;
  string model = 3;
  string type = 4;
  int32 dealer = 5;
};

service Example {
  rpc toUpper(ToUpperArgs) returns (ToUpperResult);
  rpc persistVehicle(VehicleMessage) returns (VehicleMessage);
}
