syntax="proto3";

package Service.Example.v1;

option php_namespace="Modix\\Grpc\\Service\\Example\\v1";
option php_metadata_namespace="Modix\\Grpc\\Service\\Example\\v1\\Metadata";

import "Service/Example/v1/Model/ToUpper.proto";
import "Service/Example/v1/Model/Vehicle.proto";

service Query {
  rpc toUpper(Model.ToUpperArgs) returns (Model.ToUpperResult);
  rpc findVehicle(Model.VehicleFilter) returns (Model.Vehicle);
}
